fixed up some ui

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@ and open the template in the editor.
 				
 		    <script type="text/javascript" src="js/pvis.js"></script>
 		    <script type="text/javascript" src="js/pvis.ui.js"></script>
+		    <script type="text/javascript" src="js/bubble.js"></script>
 		    <script type="text/javascript" src="js/pvis.plot.js"></script>
 		    <script type="text/javascript" src="js/pvis/campaign.js"></script>
 		    <script type="text/javascript" src="js/pvis/food.js"></script>
@@ -60,7 +61,7 @@ and open the template in the editor.
 								<p id="username"></p>
 								<div id="container"></div>
 						</div>
-						
+
             <div data-role="content" id="loginDialog" style="display: none">
 	         	 		<p class="msg">Please sign in to access data.</p>
                 <div data-role="fieldcontain">
