--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ and open the template in the editor.
 		    <meta charset="utf-8" />
 		    <meta name="viewport" content="width=device-width, initial-scale=1" />
 		    <title>
-					PatientVis
+					My Comparisons
 		    </title>
 		    <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/jquery.mobile/1.1.1/jquery.mobile-1.1.1.min.css" />
 		    <link href="css/app.css" media="all" type="text/css" rel="stylesheet"/>
@@ -25,7 +25,8 @@ and open the template in the editor.
 
 		    <!-- OMH Scripts -->
 		    <script type="text/javascript" src="js/utils.js"></script>
-		    <script type="text/javascript" src="js/OmH.js"></script>
+		    <script type="text/javascript" src="js/omh.stateless.js"></script>
+		    <script type="text/javascript" src="js/omh.js"></script>
 		    <script type="text/javascript" src="js/omh.data.js"></script>
 		    <script type="text/javascript" src="js/omh.payloads.js"></script>
 				
@@ -51,7 +52,7 @@ and open the template in the editor.
         <div data-role="page">
             <div data-theme="a" data-role="header">
                 <h3>
-                    Patient Vis
+                    My Comparisons
                 </h3>
                 <a data-role="button" id="logoutButton" data-icon="delete" data-iconpos="left" class="ui-btn-right">
                     Logout
