--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@ and open the template in the editor.
                 </a>
             </div>
 						<div data-role="content" id="content">
+								<div id="error" style="display: none"></div>
 								<p id="username"></p>
 								<div id="container"></div>
 						</div>
