preliminary version of multiple comparisons

--- a/index.html
+++ b/index.html
@@ -50,14 +50,28 @@ and open the template in the editor.
                 <h3>
                     My Comparisons
                 </h3>
-                <a data-role="button" id="logoutButton" data-icon="delete" data-iconpos="left" class="ui-btn-right">
+                <a data-role="button" data-icon="delete" data-iconpos="left" class="ui-btn-right logout">
                     Logout
                 </a>
             </div>
-            <div data-role="content" id="content">
+            <div data-role="content">
                 <div id="error" style="display: none"></div>
                 <p id="username"></p>
-                <div id="container"></div>
+                <div class="container"></div>
+			</div>
+	    </div>
+				        
+		<div data-role="page" id="comparison">
+            <div data-theme="a" data-role="header">
+                <h3>
+                    My Comparisons
+                </h3>
+                <a data-role="button" data-icon="delete" data-iconpos="left" class="ui-btn-right logout">
+                    Logout
+                </a>
+            </div>
+            <div data-role="content">
+                <div class="container"></div>
             </div>
         </div>
 
