changed PAM to Mood

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ and open the template in the editor.
                         </legend>
                         <input id="checkbox_pam" name="checkbox_pam" value="pam" type="checkbox">
                         <label for="checkbox_pam">
-                            PAM
+                            Mood
                         </label>
                         <input id="checkbox_glucose" name="checkbox_glucose" value="glucose" type="checkbox">
                         <label for="checkbox_glucose">
