added localstorage and caching

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ and open the template in the editor.
         <script type="text/javascript" src="js/lib/d3/d3.js"></script>
         <script type="text/javascript" src="js/lib/d3/d3.time.js"></script>
         <script type="text/javascript" src="js/lib/color.converter.js"></script>
-        <script type="text/javascript" src="js/lib/date.js"></script>
+        <script type="text/javascript" src="js/lib/date.format.js"></script>
 
         <!-- OMH Scripts -->
         <script type="text/javascript" src="js/utils.js"></script>
