added back button

--- a/index.html
+++ b/index.html
@@ -122,7 +122,10 @@ and open the template in the editor.
         </div>
 
         <div data-role="page" id="comparison">
-            <div data-theme="a" data-role="header" data-id="main" data-position="fixed">
+            <div data-theme="a" data-role="header" data-id="main" data-position="fixed" data-add-back-btn="true">
+                <a data-role="button" data-icon="back" lass="ui-btn-left" data-rel="back" >
+                    Back
+                </a>
                 <h3>
                     My Comparisons
                 </h3>
