changed the ui a little to make it nicer to look at hopefully

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ and open the template in the editor.
     <body style="padding: 0px;">
 
         <div data-role="page" id="comparisons">
-            <div data-theme="a" data-role="header" data-id="main" data-position="fixed">
+            <div data-theme="d" data-role="header" data-id="main" data-position="fixed">
                 <h3>
                     My Comparisons
                 </h3>
@@ -68,7 +68,7 @@ and open the template in the editor.
         </div>
 
         <div data-role="page" id="explorer">
-            <div data-theme="a" data-role="header" data-id="main" data-position="fixed">
+            <div data-theme="d" data-role="header" data-id="main" data-position="fixed">
                 <h3>
                     My Comparisons
                 </h3>
@@ -122,7 +122,7 @@ and open the template in the editor.
         </div>
 
         <div data-role="page" id="comparison">
-            <div data-theme="a" data-role="header" data-id="main" data-position="fixed" data-add-back-btn="true">
+            <div data-theme="d" data-role="header" data-id="main" data-position="fixed" data-add-back-btn="true">
                 <a data-role="button" data-icon="back" lass="ui-btn-left" data-rel="back" >
                     Back
                 </a>
@@ -139,7 +139,7 @@ and open the template in the editor.
         </div>
 
         <div data-role="page" id="login">
-            <div data-theme="a" data-role="header">
+            <div data-theme="d" data-role="header">
                 <h3>
                     My Comparisons
                 </h3>
