changed the omh library to return mock data instead of going to the server

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ and open the template in the editor.
                         <label for="textinput1">
                             Username:
                         </label>
-                        <input id="username" type="text" />
+                        <input id="username" type="text" value="mock_user" />
                     </fieldset>
                 </div>
                 <div data-role="fieldcontain">
@@ -160,7 +160,7 @@ and open the template in the editor.
                         <label for="textinput2">
                             Password:
                         </label>
-                        <input id="password" type="password" />
+                        <input id="password" type="password" value="mock_user"/>
                     </fieldset>
                 </div>
                 <input id="loginButton" type="submit" value="Submit" />
